syntax = "proto3";
option csharp_namespace = "FileGrpcCommon";
package GrpcFileWorker;

service GrpcFileWorker {
  rpc UploadBatches(UploadBatchesRequest) returns (UploadFilesResponse);
  rpc UploadFilesStreaming(stream UploadStreamingRequest) returns (UploadFilesResponse);
}

message UploadStreamingRequest {
  FileType format = 1;
  bytes data = 2;
}

message UploadBatchesRequest {
  FileType format = 1;
  repeated string data = 2;
}

message UploadFilesResponse {
 bool isUploaded = 1;
}

enum FileType {
  NONE = 0;
  JSON = 1;
}